Updated 13 files via CloudCannon

--- a/glass-door-wider-aluminum-frame-1/index.html
+++ b/glass-door-wider-aluminum-frame-1/index.html
@@ -48,13 +48,13 @@
     </header> <!-- End Header -->
 
     <div class="entry_content">
-      <p>This is Aluminum Frame Glass Door installed by tower sign</p>
+      <p>-–<br />layout: post<br />title: Glass Door Wider Aluminum Frame<br />img: himalayan.jpg<br />date: 2019-11-04 09:55:00<br />description: &gt;-<br />  You’ll find this post in your `_posts` directory. Go ahead and edit it and<br />  re-build the site to see your changes.<br />tag: Glass Door<br />-–</p>
+
+<p>This is Aluminum Frame Glass Door installed by tower sign</p>
 
 <p>Aluminum Frame has its origin name Architecture history There are benefit for having glass door such as Aluminum Frames for your business</p>
 
-<blockquote>
-  <p>It was Great Glass Work for my business store front and my customer like it. <cite>- John Hong</cite></p>
-</blockquote>
+<p>&gt; It was Great Glass Work for my business store front and my customer like it. &lt;cite&gt;- John Hong&lt;/cite&gt;</p>
 
     </div>
     
@@ -62,9 +62,9 @@
       <footer class="post_footer cf">
         <div class="post_share">
           <span>Share:</span>
-          <a href="https://twitter.com/intent/tweet?text=Glass Door Wider Aluminum Frame&url=https://glassworkny.com//glass-door-wider-aluminum-frame/" title="Share on Twitter" rel="nofollow" target="_blank"><i class="fa fa-twitter" aria-hidden="true"></i></a>
-          <a href="https://facebook.com/sharer.php?u=https://glassworkny.com//glass-door-wider-aluminum-frame/" title="Share on Facebook" rel="nofollow" target="_blank"><i class="fa fa-facebook" aria-hidden="true"></i></a>
-          <a href="https://plus.google.com/share?url=https://glassworkny.com//glass-door-wider-aluminum-frame/" title="Share on Google+" rel="nofollow" target="_blank"><i class="fa fa-google" aria-hidden="true"></i></a>
+          <a href="https://twitter.com/intent/tweet?text=Glass Door Wider Aluminum Frame&url=https://glassworkny.com//glass-door-wider-aluminum-frame-1/" title="Share on Twitter" rel="nofollow" target="_blank"><i class="fa fa-twitter" aria-hidden="true"></i></a>
+          <a href="https://facebook.com/sharer.php?u=https://glassworkny.com//glass-door-wider-aluminum-frame-1/" title="Share on Facebook" rel="nofollow" target="_blank"><i class="fa fa-facebook" aria-hidden="true"></i></a>
+          <a href="https://plus.google.com/share?url=https://glassworkny.com//glass-door-wider-aluminum-frame-1/" title="Share on Google+" rel="nofollow" target="_blank"><i class="fa fa-google" aria-hidden="true"></i></a>
         </div>
         <div class="post_tag">
           <span>Tags:</span>
